--- a/text.html
+++ b/text.html
@@ -1,3 +1,44 @@
+<a  href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_parent">
+<img src="download.jpg" class="button2">
+<img src="2.png" class="button1" >
+</a>
+
 <p class="videotitle">
-    Talking Tech and AI with Google CEO Sundar Pichai!
+    Talking Tech and AI with Google CEO Sundar<br>Pichai!
 </p>
+<p class="view">
+4.3M views:4 years ago</p>
+<p class="view">
+    Marques Brownlee
+</p>
+<style>
+    .videotitle{
+        font-family: "Roboto", "Arial", sans-serif;
+        font-size: 18px;
+        font-weight: 400;
+        text-align: left;
+        line-height: 26px;
+        margin-bottom: 0;
+    }
+    .view{
+        margin-top: 0;
+        font-family: "Roboto", "Arial", sans-serif;
+        font-size: 12px;
+        line-height: 18px;
+        font-weight:400px ;
+    }
+    .button1{
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: 0;
+        margin-right: 0;
+        height: 45px;
+        -webkit-border-before-width: 45px;
+    }
+    .button2{
+        image-rendering: auto;
+        height: 145px;
+        width: 250px;
+        border-radius: 10px;
+    }
+</style>
