--- a/documentation.html
+++ b/documentation.html
@@ -3,4 +3,14 @@
 </head>
 <p>
     This is a sample HTML File.
+    this is a  <span style = "font-weight:bold">bold</span> text
 </p>
+<!--li em {
+  color: rebeccapurple;
+}
+This selector will select any <em> element that is a descendant of an <li>.-->
+ <!--Something else you might like to try is styling a paragraph when it comes directly after a heading at the same hierarchy level in the HTML. To do so, place a + (a next-sibling combinator) between the selectors.-->
+ <a href="https://www.brave.com" target="_blank">
+    Click here
+ </a>
+ <div class="outer"><div class="box">This is having width of 90%-10px</div></div>
